# CPP-School

./: CMakeLists.txt
Class1/: Class1.cpp
Class2/: Class2.cpp
Class3/: Task1.cpp  Task2.cpp  Task3.cpp
Class4/: Task1.cpp  Task2.cpp  Task3.cpp
Class5/: Task1.cpp  Task2.cpp  Task3.cpp
Tests/: Test2.cpp  Test3.cpp
