cmake_minimum_required(VERSION 3.21)
project(CPP)

set(CMAKE_CXX_STANDARD 17)

add_executable(Test2 Tests/Test2.cpp)
add_executable(Test3 Tests/Test3.cpp)

add_executable(Class1 Class1/Class1.cpp)
add_executable(Class2 Class2/Class2.cpp)

add_executable(Class3Task1 Class3/Task1.cpp)
add_executable(Class3Task2 Class3/Task2.cpp)
add_executable(Class3Task3 Class3/Task3.cpp)

add_executable(Class4Task1 Class4/Task1.cpp)
add_executable(Class4Task2 Class4/Task2.cpp)
add_executable(Class4Task3 Class4/Task3.cpp)

add_executable(Class5Task1 Class5/Task1.cpp)
add_executable(Class5Task2 Class5/Task2.cpp)
add_executable(Class5Task3 Class5/Task3.cpp)